--- a/cse305_final/templates/home.html
+++ b/cse305_final/templates/home.html
@@ -13,13 +13,12 @@
 
 	{% if not loggedIn %}
 	<div id="signInButton">
-		<a class="link" href="/loginForm">Sign In</a>
+		<a class="link" href="/verifylogin">Sign In</a>
 	</div>
 	{% else %}
 	<div class="dropdown">
 		<button class="dropbtn">Hello, <br>{{firstName}}</button>
 		<div class="dropdown-content">
-			<a href="/account/orders">Your orders</a>
 			<a href="/account/profile">Your profile</a>
 			<hr>
 			<a href="/logout">Sign Out</a>
@@ -48,7 +47,7 @@
 			<tr id="productImage">
 				{% for row in data %}
 				<td>
-					<a href="/productDescription?productId={{row[0]}}">
+					<a href="/itemInfo?productId={{row[0]}}">
 						<img src={{ url_for('static', filename='uploads/' + row[4]) }} id="itemImage" />
 					</a>
 				</td>
