--- a/cse305_final/templates/login.html
+++ b/cse305_final/templates/login.html
@@ -5,10 +5,10 @@
 <body>
 <p> LOG IN </p>
 <form action="/login" method="POST">
-	<p>Email: <input type="text" name="email"></p>
-	<p>Password: <input type="password" name="password"></p>
+	<p>Email: <input type="text" name="EmailID"></p>
+	<p>Password: <input type="password" name="Password"></p>
 	<p><input type="submit"></p>
-	<a href="/registerationForm">Register here</a>
+	<a href="/registration">Register here</a>
 </form>
 
 </body>
