--- a/cse305_final/templates/register.html
+++ b/cse305_final/templates/register.html
@@ -6,18 +6,17 @@
 </head>
 <body>
 <form action="/register" method="POST" onsubmit="return validate()">
-    <p>First Name: <input type="text" name="first"></p>
-    <p>Last Name: <input type="text" name="last"></p>
-    <p>Address: <input type="text" name="address"></p>
-    <p>Phone Number: <input type="text" name="number"></p>
+    <p>First Name: <input type="text" name="FirstName"></p>
+    <p>Last Name: <input type="text" name="LastName"></p>
+    <p>Address: <input type="text" name="Address"></p>
+    <p>Phone Number: <input type="text" name="PhoneNumber"></p>
 
-    <p>Email: <input type="email" name="email"></p>
-    <P>Password: <input type="password" name="pw" id="password" required></p>
-    <p>Confirm Password: <input type="password" name="cpassword" id="cpassword"></p>
+    <p>Email: <input type="email" name="EmailID"></p>
+    <P>Password: <input type="password" name="Password" id="password" required></p>
 
     <p><input type="submit" value="Register"></p>
 
-    <a href="/loginForm">Login here</a>
+    <a href="/verifylogin">Login here</a>
 </form>
 </body>
 </html>
