--- a/cse305_final/templates/register.html
+++ b/cse305_final/templates/register.html
@@ -6,14 +6,13 @@
 </head>
 <body>
 <form action="/register" method="POST" onsubmit="return validate()">
-    <p>First Name: <input type="text" name="first"></p>
-    <p>Last Name: <input type="text" name="last"></p>
-    <p>Address: <input type="text" name="address"></p>
-    <p>Phone Number: <input type="text" name="number"></p>
+    <>First Name: <input type="text" name="FirstName"></>
+    <p>Last Name: <input type="text" name="LastName"></p>
+    <p>Address: <input type="text" name="Address"></p>
+    <p>Phone Number: <input type="text" name="PhoneNumber"></p>
 
-    <p>Email: <input type="email" name="email"></p>
-    <P>Password: <input type="password" name="pw" id="password" required></p>
-    <p>Confirm Password: <input type="password" name="cpassword" id="cpassword"></p>
+    <p>Email: <input type="email" name="EmailID"></p>
+    <P>Password: <input type="password" name="Password" id="Password" required></p>
 
     <p><input type="submit" value="Register"></p>
 
