Bug fixes in home.html file

--- a/cse305_final/templates/home.html
+++ b/cse305_final/templates/home.html
@@ -27,7 +27,7 @@
 	{% endif %}
 	<div id="cart">
 		<a class="link" href="/cart">
-			<img src={{url_for('static', filename='images/shoppingCart.png')}} id="cartIcon" />
+			<img src={{url_for('static', filename='images/shoppingcart.jpg')}} id="cartIcon" />
 			CART {{itemNo}}
 		</a>
 	</div>
