fixed a few links

--- a/cse305_final/templates/home.html
+++ b/cse305_final/templates/home.html
@@ -26,7 +26,7 @@
 	</div>
 	{% endif %}
 	<div id="cart">
-		<a class="link" href="/cart">
+		<a class="link" href="/ShoppingCart">
 			<img src={{url_for('static', filename='images/shoppingcart.jpg')}} id="cartIcon" />
 			CART {{itemNo}}
 		</a>
