home page listing items

--- a/cse305_final/templates/home.html
+++ b/cse305_final/templates/home.html
@@ -44,7 +44,7 @@
 				</tr>
 				<tr id="Image">
 					<td>
-						<a href="/productInfo?productId={{data[1]}}">
+						<a href="/itemInfo?ArticleID={{data[1]}}">
 						</a>
 					</td>
 				</tr>
