--- a/cse305_final/templates/register.html
+++ b/cse305_final/templates/register.html
@@ -14,6 +14,7 @@
     <p>Email: <input type="email" name="EmailID"></p>
     <P>Password: <input type="password" name="Password" id="password" required></p>
 
+    <P>Credit Card: <input type="text" name="paymentInfo" id="paymentInfo" required></p>
     <p><input type="submit" value="Register"></p>
 
     <a href="/verifylogin">Login here</a>
