--- a/cse305_final/templates/register.html
+++ b/cse305_final/templates/register.html
@@ -15,6 +15,7 @@
     <P>Password: <input type="password" name="Password" id="password" required></p>
 
     <P>Credit Card: <input type="text" name="paymentInfo" id="paymentInfo" required></p>
+    <P>Expiration Date (mm/yy): <input type="text" name="expirationDate" id="expirationDate" required></p>
     <p><input type="submit" value="Register"></p>
 
     <a href="/verifylogin">Login here</a>
