--- a/cse305_final/templates/login.html
+++ b/cse305_final/templates/login.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>	LOG IN </title>
+	<link rel="stylesheet" href={{ url_for('static', filename='css/topStyle.css') }} />
 </head>
 <body>
 <p> LOG IN </p>
