edit profile html

--- a/cse305_final/templates/profile.html
+++ b/cse305_final/templates/profile.html
@@ -39,7 +39,7 @@
 </div>
 
 <div class="display">
-	<a href="/editAccountt">Edit Profile</a><br>
+	<a href="/account/edit">Edit Profile</a><br>
 	<a href="/account/UpdatePassword">Update your password</a>
 </div>
 </body>
