edit editAccount html and editAccount function

--- a/cse305_final/templates/editAccount.html
+++ b/cse305_final/templates/editAccount.html
@@ -33,7 +33,7 @@
 </div>
 
 <div class="display">
-	<h2>Edit profile</h2>
+	<h2>Edit Account</h2>
 	<form action="/updateAccount" method="POST">
 		<p>Email:<input type="email" name="EmailID" value={{accountInfo[0]}} readonly="readonly"></p>
 		<p>First Name:<input type="text" name="FirstName" value={{accountInfo[1]}}></p>
