--- a/cse305_final/templates/profile.html
+++ b/cse305_final/templates/profile.html
@@ -10,10 +10,10 @@
 	<a href="/">
 		<img id="logo" src= {{ url_for('static', filename='images/logo.png') }} />
 	</a>
-	<form>
+<!--	<form>
 		<input id="searchBox" type="text" name="searchQuery">
 		<input id="searchButton" type="submit" value="Search">
-	</form>
+	</form> -->
 
 	{% if not loggedIn %}
 	<div id="signInButton">
@@ -23,8 +23,7 @@
 	<div class="dropdown">
 		<button class="dropbtn">Hello, <br>{{firstName}}</button>
 		<div class="dropdown-content">
-			<a href="/">Your orders</a>
-			<a href="/account/profile">Your profile</a>
+			<a href="/account/profile">Your Account</a>
 			<hr>
 			<a href="/logout">Sign Out</a>
 		</div>
