--- a/cse305_final/templates/home.html
+++ b/cse305_final/templates/home.html
@@ -47,7 +47,7 @@
 				</tr>
 				<tr id="Image">
 					<td>
-						<a href="/itemInfo?ArticleID={{data[1]}}">
+						<a href="/itemInfo?ArticleID={{data[0][1]}}">
 							View Item
 						</a>
 					</td>
