--- a/cse305_final/templates/home.html
+++ b/cse305_final/templates/home.html
@@ -47,9 +47,7 @@
 				</tr>
 				<tr id="Image">
 					<td>
-						<a href="/itemInfo?ArticleID={{data[1]}}">
-							View Item
-						</a>
+						<a href="/itemInfo?ArticleID={{data[0][1]}}">View Item</a>
 					</td>
 				</tr>
 				<tr id="Price">
