--- a/cse305_final/templates/itemInfo.html
+++ b/cse305_final/templates/itemInfo.html
@@ -32,17 +32,17 @@
 	{% endif %}
 	<div id="kart">
 		<a class="link" href="/cart">
-			<img src={{url_for('static', filename='images/shoppingCart.png')}} id="cartIcon" />
-			CART {{noOfItems}}
+			<img src={{url_for('static', filename='images/shoppingcart.jpg')}} id="cartIcon" />
+			CART {{itemNo}}
 		</a>
 	</div>
 </div>
 <div id="display">
 	<div id="productName">
-		<h1>{{data[1]}}</h1>
+		<h1>{{itemInfo[1]}}</h1>
 	</div>
 	<div>
-		<img src={{url_for('static', filename='uploads/'+data[4]) }} id="productImage"/>
+		<img src={{url_for('static', filename='uploads/'+itemInfo[4]) }} id="productImage"/>
 	</div>
 
 	<div id="productDescription">
@@ -50,19 +50,19 @@
 		<table id="descriptionTable">
 			<tr>
 				<td>Name</td>
-				<td>{{data[1]}}</td>
+				<td>{{itemInfo[1]}}</td>
 			</tr>
 			<tr>
 				<td>Price</td>
-				<td>${{data[2]}}</td>
+				<td>${{itemInfo[2]}}</td>
 			</tr>
 			<tr>
 				<td>Stock</td>
-				<td>{{data[5]}}</td>
+				<td>{{itemInfo[5]}}</td>
 			</tr>
 		</table>
 		<h2>Description</h2>
-		<p>{{data[3]}}</p>
+		<p>{{itemInfo[3]}}</p>
 	</div>
 	<div id="addToCart">
 		<a href="/addToCart?productId={{request.args.get('productId')}}">Add to Cart</a>
