adding item to cart

--- a/cse305_final/templates/itemInfo.html
+++ b/cse305_final/templates/itemInfo.html
@@ -58,7 +58,7 @@
 		<p>There are currently no reviews.</p>
 	</div>
 	<div id="addToCart">
-		<a href="/addToCart?productId={{request.args.get('productId')}}">Add to Cart</a>
+		<a href="/addToCart?ArticleID={{request.args.get('ArticleID')}}">Add to Cart</a>
 	</div>
 </div>
 </body>
