--- a/cse305_final/templates/login.html
+++ b/cse305_final/templates/login.html
@@ -8,7 +8,7 @@
 <form action="/login" method="POST">
 	<p>Email: <input type="text" name="EmailID"></p>
 	<p>Password: <input type="password" name="Password"></p>
-	<p><input type="submit"></p>
+	<p><input type="submit" name="Submit"></p>
 	<a href="/registration">Register here</a>
 </form>
 
