front end of checkout

--- a/cse305_final/templates/ShoppingCart.html
+++ b/cse305_final/templates/ShoppingCart.html
@@ -59,6 +59,6 @@
 		</div>
 	</div>
 </div>
-<a href="/checkout">Proceed to checkout</a>
+<a href="/checkout">Confirm checkout</a>
 </body>
 </html>
