--- a/cse305_final/templates/checkout.html
+++ b/cse305_final/templates/checkout.html
@@ -34,11 +34,12 @@
 </div>
 <div class="display">
 	<div>
-		<h2>Order ID: </h2>
-        orderid <br>
-        <h2>Shipping to:</h2>
-        name<br>
-        address<br>
+		<h2>Order ID: {{orderid}}</h2>
+        <h4>FedEX will be shipping this order to
+			{{firstname}}<br>
+        	{{address}}<br>
+			Order placed: {{date}}</h4>
+
     </div>
 </div>
 </body>
