bug fixes for front and back end

--- a/cse305_final/templates/checkout.html
+++ b/cse305_final/templates/checkout.html
@@ -34,11 +34,11 @@
 </div>
 <div class="display">
 	<div>
-		<h2>Order ID: {{orderid}}</h2>
+		<h2>Order ID: {{orderID}}</h2>
         <h4>FedEX will be shipping this order to
-			{{firstname}}<br>
+			{{name}}<br>
         	{{address}}<br>
-			Order placed: {{date}}</h4>
+			Order placed: {{now}}</h4>
 
     </div>
 </div>
