bug fixes home/checkout (frontend)

--- a/cse305_final/templates/home.html
+++ b/cse305_final/templates/home.html
@@ -17,7 +17,7 @@
 	</div>
 	{% else %}
 	<div class="dropdown">
-		<button class="dropbtn">Hello, <br>{{firstName}}</button>
+		<button class="dropbtn">Hello, <br>{{FirstName}}</button>
 		<div class="dropdown-content">
 			<a href="/account/profile">Your profile</a>
 			<hr>
