added return to homepage button after checking out

--- a/cse305_final/templates/checkout.html
+++ b/cse305_final/templates/checkout.html
@@ -39,8 +39,10 @@
 			{{name}}<br>
         	{{address}}<br>
 			Order placed: {{now}}</h4>
-
+		<a href="/">Return to HomePage</a>
     </div>
+
+
 </div>
 </body>
 </html>
