bug fix on checkout

--- a/cse305_final/templates/checkout.html
+++ b/cse305_final/templates/checkout.html
@@ -17,7 +17,8 @@
         <h4>FedEX will be shipping this order to
 			{{name}}<br>
         	{{address}}<br>
-			Order placed: {{now}}</h4>
+			Order placed: {{now}}<br>
+			${{totalPrice}}0 charged to Credit Card</h4>
 		<a href="/">Return to HomePage</a>
     </div>
 
