update checkout page

--- a/cse305_final/templates/checkout.html
+++ b/cse305_final/templates/checkout.html
@@ -12,6 +12,8 @@
 	</a>
 </div>
 <div class="display">
+
+	{% if {{error}} %}
 	<div>
 		<h2>Order ID: {{orderID}}</h2>
         <h4>FedEX will be shipping this order to
@@ -21,7 +23,12 @@
 			${{totalPrice}}0 charged to Credit Card</h4>
 		<a href="/">Return to HomePage</a>
     </div>
-
+	{% else %}
+	<div>
+		<h2>Error processing checkout</h2>
+		<a href="/">Return to HomePage</a>
+    </div>
+	{% endif %}
 
 </div>
 </body>
