final bug fix for both back and front end

--- a/cse305_final/templates/ShoppingCart.html
+++ b/cse305_final/templates/ShoppingCart.html
@@ -53,6 +53,8 @@
 		</div>
 	</div>
 </div>
-	<a href="/checkout">Confirm checkout</a>
+	{% if totalPrice %}
+		<a href="/checkout">Confirm checkout</a>
+	{% endif %}
 </body>
 </html>
