--- a/cse305_final/templates/ShoppingCart.html
+++ b/cse305_final/templates/ShoppingCart.html
@@ -40,7 +40,7 @@
 			<div id="itemName">
 				<span id="itemNameTag">{{row[1]}}
 					<br>Serial Number #{{row[0]}}</span><br>
-				<a href="/removeFromCart?productId={{row[0]}}">Remove</a>
+				<a href="/removeFromCart?ArticleID={{row[0]}}">Remove</a>
 			</div>
 			<div id="itemPrice">
 				${{row[2]}}0
