--- a/cse305_final/templates/ShoppingCart.html
+++ b/cse305_final/templates/ShoppingCart.html
@@ -22,6 +22,7 @@
 		<button class="dropbtn">Hello, <br>{{firstName}}</button>
 		<div class="dropdown-content">
 			<a href="/account/profile">Your profile</a>
+			<a href="/account/orders">Your orders</a>
 			<hr>
 			<a href="/logout">Sign Out</a>
 		</div>
