--- a/cse305_final/templates/home.html
+++ b/cse305_final/templates/home.html
@@ -20,6 +20,7 @@
 		<button class="dropbtn">Hello, <br>{{FirstName}}</button>
 		<div class="dropdown-content">
 			<a href="/account/profile">Your profile</a>
+			<a href="/account/orders">Your orders</a>
 			<hr>
 			<a href="/logout">Sign Out</a>
 		</div>
