--- a/cse305_final/templates/orders.html
+++ b/cse305_final/templates/orders.html
@@ -39,7 +39,7 @@
             OrderID: {{data[0]}}<br>
 			Price: {{data[1]}}<br>
             Date Ordered: {{data[2]}}<br>
-        {% endif %}
+        {% endfor %}
 	</div>
 </div>
 </body>
