--- a/cse305_final/templates/profile.html
+++ b/cse305_final/templates/profile.html
@@ -25,6 +25,7 @@
 
 		<div class="dropdown-content">
 			<a href="/account/profile">Your Account</a>
+			<a href="/account/orders">Your orders</a>
 			<hr>
 			<a href="/logout">Sign Out</a>
 		</div>
