bugfixes with toolbar

--- a/cse305_final/templates/orders.html
+++ b/cse305_final/templates/orders.html
@@ -28,7 +28,7 @@
         {% endfor %}
 	</div>
 
-	<a href="/">Return to HomePage</a>
+	<a href="/account">Return to HomePage</a>
 </div>
 </body>
 </html>
