Bug fixes in updatepassword.html

--- a/cse305_final/templates/orders.html
+++ b/cse305_final/templates/orders.html
@@ -24,11 +24,11 @@
 		{% for data in orders %}
             OrderID: {{data[0]}}<br>
 			Price: {{data[1]}}<br>
-            Date Ordered: {{data[2]}}<br>
+            Date Ordered: {{data[2]}}<br><br>
         {% endfor %}
 	</div>
 
-	<a href="/">Return to HomePage</a>
+	<a href="/account/profile">Return to Account</a>
 </div>
 </body>
 </html>
