--- a/cse305_final/templates/profile.html
+++ b/cse305_final/templates/profile.html
@@ -41,7 +41,7 @@
 
 <div class="display">
 	<a href="/account/edit">Edit Profile</a><br>
-	<a href="/account/UpdatePassword">Update your password</a>
+	<a href="/account/updatePassword">Update your password</a>
 </div>
 </body>
 </html>
