--- a/cse305_final/templates/ShoppingCart.html
+++ b/cse305_final/templates/ShoppingCart.html
@@ -56,6 +56,7 @@
 </div>
 	{% if totalPrice %}
 		<a href="/checkout">Confirm checkout</a>
+		<a href="/">Continue Shopping</a>
 	{% endif %}
 </body>
 </html>
