profile - cart bug fix

--- a/cse305_final/templates/profile.html
+++ b/cse305_final/templates/profile.html
@@ -33,7 +33,7 @@
 	{% endif %}
 	<div id="kart">
 		<a class="link" href="/cart">
-			<img src={{url_for('static', filename='images/shoppingCart.png')}} id="cartIcon" />
+			<img src={{url_for('static', filename='images/ShoppingCart.png')}} id="cartIcon" />
 			CART {{noOfItems}}
 		</a>
 	</div>
