profile - cart bug fix

--- a/cse305_final/templates/profile.html
+++ b/cse305_final/templates/profile.html
@@ -32,9 +32,9 @@
 	</div>
 	{% endif %}
 	<div id="kart">
-		<a class="link" href="/cart">
-			<img src={{url_for('static', filename='images/ShoppingCart.png')}} id="cartIcon" />
-			CART {{noOfItems}}
+		<a class="link" href="/ShoppingCart">
+			<img src={{url_for('static', filename='images/shoppingCart.png')}} id="cartIcon" />
+			CART ({{noOfItems}})
 		</a>
 	</div>
 </div>
