--- a/cse305_final/templates/itemInfo.html
+++ b/cse305_final/templates/itemInfo.html
@@ -27,9 +27,9 @@
 	</div>
 	{% endif %}
 	<div id="kart">
-		<a class="link" href="/cart">
+		<a class="link" href="/ShoppingCart">
 			<img src={{url_for('static', filename='images/shoppingCart.png')}} id="cartIcon" />
-			CART {{noOfItems}}
+			CART ({{noOfItems}})
 		</a>
 	</div>
 </div>
