--- a/cse305_final/templates/updatePassword.html
+++ b/cse305_final/templates/updatePassword.html
@@ -12,6 +12,6 @@
 	<p>Confirm Password: <input type="password" name="cpassword" id="cpassword"></p>
 	<input type="submit" value="Save">
 </form>
-<a href="{{ url_for('profileHome') }}">Go to Profile</a>
+<a href="{{ url_for('/account/profile') }}">Go to Profile</a>
 </body>
 </html>
