--- a/cse305_final/templates/updatePassword.html
+++ b/cse305_final/templates/updatePassword.html
@@ -7,9 +7,9 @@
 <h1>Change password</h1>
 <p>{{ msg }}</p>
 <form action={{ url_for('changePassword') }} method="POST" onsubmit="return validate()">
-	<p>Old Password: <input type="password" name="oldpassword"></p>
-	<p>New Password: <input type="password" name="newpassword" id="newpassword"></p>
-	<p>Confirm Password: <input type="password" name="cpassword" id="cpassword"></p>
+	<p>Old Password: <input type="password" name="prevPass"></p>
+	<p>New Password: <input type="password" name="newPass" id="newpassword"></p>
+	<p>Confirm Password: <input type="password" name="cPass" id="cpassword"></p>
 	<input type="submit" value="Save">
 </form>
 <a href="/account/profile">Go to Profile</a>
