--- a/cse305_final/templates/orders.html
+++ b/cse305_final/templates/orders.html
@@ -11,7 +11,7 @@
 		<img id="logo" src= {{ url_for('static', filename='images/logo.png') }} />
 	</a>
 
-	<div id="cart">
+	<div id="kart">
 		<a class="link" href="/ShoppingCart">
 			<img src={{url_for('static', filename='images/shoppingcart.jpg')}} id="cartIcon" />
 			CART {{itemNo}}
