--- a/cse305_final/templates/updatePassword.html
+++ b/cse305_final/templates/updatePassword.html
@@ -13,5 +13,6 @@
 	<input type="submit" value="Save">
 </form>
 <a href="/account/profile">Go to Profile</a>
+<br><br>Password change is successful only if you are redirected to your accounts page after clicking Submit
 </body>
 </html>
