--- a/cse305_final/static/css/topStyle.css
+++ b/cse305_final/static/css/topStyle.css
@@ -1,6 +1,6 @@
 #logo {
-	height: 40px;
-	width: 50px;
+	height: 50px;
+	width: 200px;
 	margin-left: 20px;
 	margin-top: 10px;
 	margin-bottom: 10px;
@@ -44,7 +44,7 @@
 
 .dropdown {
 	position: relative;
-	float: left;
+	float: right;
 }
 
 .dropdown-content  {
