--- a/cse305_final/templates/ShoppingCart.html
+++ b/cse305_final/templates/ShoppingCart.html
@@ -55,7 +55,7 @@
 	</div>
 </div>
 	{% if totalPrice %}
-		<a href="/checkout">Confirm checkout</a>
+		<a href="/checkout">Confirm checkout</a><br>
 		<a href="/">Continue Shopping</a>
 	{% endif %}
 </body>
