--- a/cse305_final/templates/editAccount.html
+++ b/cse305_final/templates/editAccount.html
@@ -24,7 +24,7 @@
 		</div>
 	</div>
 	{% endif %}
-	<div id="Cart">
+	<div id="kart">
 		<a class="link" href="/ShoppingCart">
 			<img src={{url_for('static', filename='images/shoppingcart.jpg')}} id="cartIcon" />
 			CART {{noOfItems}}
