--- a/cse305_final/templates/profile.html
+++ b/cse305_final/templates/profile.html
@@ -24,7 +24,7 @@
 		<button class="dropbtn">Hello, <br>{{firstName}}</button>
 
 		<div class="dropdown-content">
-			<a href="/account/profile">Your Account</a>
+			<a href="/account/profile">Your profile</a>
 			<a href="/account/orders">Your orders</a>
 			<hr>
 			<a href="/logout">Sign Out</a>
