--- a/cse305_final/templates/orders.html
+++ b/cse305_final/templates/orders.html
@@ -23,7 +23,7 @@
 		<h2>Orders</h2>
 		{% for data in orders %}
             OrderID: {{data[0]}}<br>
-			Price: {{data[1]}}<br>
+			Price: {{data[1]}}0<br>
             Date Ordered: {{data[2]}}<br><br>
         {% endfor %}
 	</div>
