Bug fixes - shopping cart icon + number of items in cart

--- a/cse305_final/templates/editAccount.html
+++ b/cse305_final/templates/editAccount.html
@@ -27,7 +27,7 @@
 	<div id="kart">
 		<a class="link" href="/ShoppingCart">
 			<img src={{url_for('static', filename='images/shoppingcart.jpg')}} id="cartIcon" />
-			CART {{noOfItems}}
+			CART ({{itemNo}})
 		</a>
 	</div>
 </div>
