--- a/cse305_final/templates/home.html
+++ b/cse305_final/templates/home.html
@@ -29,7 +29,7 @@
 	<div id="kart">
 		<a class="link" href="/ShoppingCart">
 			<img src={{url_for('static', filename='images/shoppingcart.jpg')}} id="cartIcon" />
-			CART {{itemNo}}
+			CART ({{itemNo}})
 		</a>
 	</div>
 </div>
