--- a/cse305_final/templates/profile.html
+++ b/cse305_final/templates/profile.html
@@ -10,10 +10,6 @@
 	<a href="/">
 		<img id="logo" src= {{ url_for('static', filename='images/logo.png') }} />
 	</a>
-<!--	<form>
-		<input id="searchBox" type="text" name="searchQuery">
-		<input id="searchButton" type="submit" value="Search">
-	</form> -->
 
 	{% if not loggedIn %}
 	<div id="signInButton">
@@ -33,8 +29,8 @@
 	{% endif %}
 	<div id="kart">
 		<a class="link" href="/ShoppingCart">
-			<img src={{url_for('static', filename='images/shoppingCart.png')}} id="cartIcon" />
-			CART ({{noOfItems}})
+			<img src={{url_for('static', filename='images/shoppingcart.jpg')}} id="cartIcon" />
+			CART ({{itemNo}})
 		</a>
 	</div>
 </div>
