MAJOR BUG FIXES AND WEB APP CONSISTENCY!

--- a/cse305_final/templates/itemInfo.html
+++ b/cse305_final/templates/itemInfo.html
@@ -28,8 +28,8 @@
 	{% endif %}
 	<div id="kart">
 		<a class="link" href="/ShoppingCart">
-			<img src={{url_for('static', filename='images/shoppingCart.png')}} id="cartIcon" />
-			CART ({{noOfItems}})
+			<img src={{url_for('static', filename='images/shoppingcart.jpg')}} id="cartIcon" />
+			CART ({{itemNo}})
 		</a>
 	</div>
 </div>
