--- a/cse305_final/static/css/topStyle.css
+++ b/cse305_final/static/css/topStyle.css
@@ -18,6 +18,10 @@
 	background-color: black;
 	color: white;
 	padding: 16px;
+	margin-left: 20px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	margin-right: 20px;
 	font-size: 15px;
 	border: none;
 	cursor: pointer;
@@ -26,7 +30,7 @@
 
 .dropdown {
 	position: relative;
-	float: right;
+	float: left;
 }
 
 .dropdown-content  {
