--- a/cse305_final/templates/ShoppingCart.html
+++ b/cse305_final/templates/ShoppingCart.html
@@ -15,7 +15,7 @@
 
 	{% if not loggedIn %}
 		<div id="signInButton">
-			<a class="link" href="/loginForm">Sign In</a>
+			<a class="link" href="/verifylogin">Sign In</a>
 		</div>
 	{% else %}
 	<div class="dropdown">
