--- a/cse305_final/templates/itemInfo.html
+++ b/cse305_final/templates/itemInfo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Product Description</title>
-<link rel="stylesheet" href={{url_for('static', filename='css/productDescription.css')}} />
+<link rel="stylesheet" href={{url_for('static', filename='css/itemDescription.css')}} />
 <link rel="stylesheet" href={{ url_for('static', filename='css/topStyle.css')}} />
 </head>
 <body>
@@ -13,7 +13,7 @@
 
 	{% if not loggedIn %}
 	<div id="signInButton">
-		<a class="link" href="/loginForm">Sign In</a>
+		<a class="link" href="/verifylogin">Sign In</a>
 	</div>
 	{% else %}
 	<div class="dropdown">
